# fang

./: autorun
lib/: socials.txt  sp_messages
lib/CVS/: Entries  Repository
lib/boards/: aiel  aielpolicy  amarinda  aryth  ashaic  ashainstrctor  ashaooc  ashapolicy  beta.hld  blademaster  bothtowers  botrh  botrh2  btdisc  builds  burnout  cadene  chosen  chris  cotl  cotlic  darkfriend  dreadlord  entertain  global  guildleaders  hunters  icamador  icbaerlon  iccaemlyn  iccairhien  iceboudar  icebox  icfaldara  icillian  ideas  immort  index  kin  multi  (+22 more)
lib/etc/: dns
lib/etc/CVS/: Repository
lib/guilds/: Aan'cue  Aiel  Ashaman  Avenshar  BOTRH  Blademasters  Borderguard  COTL  Chosen  Circle  Coders  Commoners  Council  Cynics  DSspies  Darkfriends  Deathwatch  Demandred  Dragonsworn  Dreadlords  Entertainers  FABRICATI  Family  FangFanClub  Flirters  Gleemen  Guildleaders  Helpers  Houses  Hunters  Illuminators  Kin  Maple  Menagerie  Moridin  Ogier  Pokemon  Queen  RSedai  RWarder  (+14 more)
lib/guilds/backup/: Aan'cue  Ashaman  Assassins  Borderguard  ChaAvenshar  Commoners  Council  Deathwatch  FABRICATI  Flirters  Guildleaders  Helpers  Kin  Mandarb  Mindscape  Ogier  Ottoman  Queen  RSedai  Seafolk  Seanchan  Skittles  TRivers  Tea  Tournement  Travel  index  tatertot
lib/guilds/backup2/: AAAC  Aiel  Ashaman  BOTRH  Blademasters  Borderguard  Caravan  ChaAvenshar  Chosen  Coders  DSspies  Darkfriends  Darkfriends.bak  Deathwatch  Dragonsworn  Dreadlords  Family  FangFanClub  Flirters  Guildleaders  Helpers  Houses  Hunters  Kin  Lostones  Maple  Mindscape  Pokemon  RSedai  RWarder  Rebels  Seafolk  Seanchan  TRivers  TSedai  TWarder  Tinkers  Tower  Wolfkin  btower  (+4 more)
lib/guilds/working/: Aiel  BOTRH  COTL  Circle  Coders  Cynics  DSspies  Darkfriends  Demandred  Dragonsworn  Dreadlords  Entertainers  FangFanClub  Gleemen  Houses  Hunters  Illuminators  Maple  Menagerie  Moridin  Pokemon  RWarder  RandFriends  Rebels  TSedai  TWarder  Tower  Wolfkin  index  protoguild
lib/misc/: bugs  ideas  messages  newideas  socials  socideas  sp_messages  todo  tp_messages  typos  xnames
lib/misc/CVS/: Entries  Repository
lib/plralias/CVS/: Repository  Root
lib/plralias/P-T/: tempus.alias
lib/plrfiles/K-O/: otto.old  otto.plr
lib/plrobjs/K-O/: otto.know  otto.objs
lib/text/: background  chan  gossip  greeting  handbook  imotd  imotd.save  info  journal  motd  motd.backup  motd~  news  nobles  oldnews  wiz  wizlist  wizlist.backup  wizlist.backup2
lib/text/CVS/: Entries  Repository
lib/text/help/: bdispl.hlp  bm_help  btower  chan  ghelp  help.hlp  help.hlp~  helptp  info.hlp.save  motd  oranks  quest  reb1  screen  screen.backup  screen.backup2  swed
lib/text/infofiles/: general.inf  guild.inf  index
lib/text/policies/: guildpols.pol  index  policies
lib/world/: 208.zon  bad_objs  bad_rooms  no_backs  noexits  nowheres  rec_exits  susp_objs  susp_rooms  unbalanced
lib/world/CVS/: Entries  Repository
lib/world/mob/: 0.mob  1.mob  10.mob  100.mob  100.wld  106.mob  107.mob  108.mob  115.mob  118.mob  119.mob  120.mob  13.mob  130.mob  131.mob  140.mob  143.mob  144.mob  146.mob  147.mob  148.mob  149.mob  150.mob  153.mob  154.mob  155.mob  156.mob  160.mob  165.mob  17.mob  170.backup.mob  170.mob  171.mob  172.mob  173.mob  175.mob  181.mob  19.mob  190.mob  191.mob  (+73 more)
lib/world/qst/: 100.qst  130.qst  325.qst  326.qst  index
lib/world/shp/: 0.shp  10.shp  100.shp  107.shp  115.shp  118.shp  13.shp  143.shp  144.shp  146.shp  147.shp  150.shp  152.bak  156.shp  157.shp  160.shp  17.shp  170.shp  171.shp  173.shp  174.shp  175.shp  19.shp  191.shp  20.shp  230.shp  240.shp  241.shp  251.shp  259.shp  27.shp  270.shp  280.shp  283.shp  293.shp  297.shp  299.shp  3.shp  30.shp  300.shp  (+23 more)
lib/world/trg/: 0.trg  10.trg  100.trg  100.trg~  118.trg  119.trg  120.trg  13.trg  130.trg  175.trg  181.trg  251.trg  256.trg  26.trg  27.trg  (+19 more)
libstrfunc-7.4.6/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  b64.h  cfg.c  cfg.h  cfg.lo  cfg.y  cfglex.c  cfglex.lo  cfgread.c  cfgread.lo  cfgy.c  cgifunc.c  cgifunc.lo  config.h  config.h.in  config.status  configure  configure.in  datetime.c  datetime.lo  filepos.c  filepos.lo  format.c  format.lo  getopt.c  getopt.h  getopt.h.in  join.c  join.lo  lang.c  (+27 more)
libstrfunc-7.4.6/.deps/: cfg.Plo  cfglex.Plo  cfgread.Plo  cgifunc.Plo  datetime.Plo  filepos.Plo  format.Plo  join.Plo  lang.Plo  netconv.Plo  param.Plo  replace.Plo  safealloc.Plo  sbuf.Plo  sed.Plo  simplechar.Plo  split.Plo  strfunc.Plo  svectpair.Plo
libstrfunc-7.4.6/.libs/: libstrfunc.la  libstrfunc.lai  libstrfunc.so.7
libstrfunc-7.4.6/man/: .cvsignore  Makefile  Makefile.am  Makefile.in
libstrfunc-7.4.6/man/man3/: cfgget.3  countchar.3  html_quote.3  initFILEpos.3  libstrfunc.3  quoted_printable_decode.3  sbuf_extend.3  sed_free.3  sf_fmt.3  sf_split.3  sf_time.3  strndup.3  svect.3
libstrfunc-7.4.6/test/: Makefile  Makefile.am  Makefile.in  README  cfg  cfg.c  fmt  fmt.c  mime  mime.c  param  param.c  replace  replace.c  sbuf  sbuf.c  sed  sed.c  split  split.c  test.cfg  time  time.c
libstrfunc-7.4.6/test/.deps/: cfg.Po  fmt.Po  mime.Po  param.Po  replace.Po  sbuf.Po  sed.Po  split.Po  time.Po
libstrfunc-7.4.6/test/.libs/: cfg  fmt  lt-replace  mime  param  replace  sbuf  sed  split  time
lua-5.0/test/: lua  luac
src/: #db.c#  .#db.c  .cvsignore  CvTAG  Makefile  Makefile~  act.comm.c  act.comm.d  act.guild.c  act.guild.d  act.h  act.informative.c  act.informative.d  act.item.c  act.item.d  act.movement.c  act.movement.d  act.offensive.c  act.offensive.c.save  act.offensive.d  act.other.c  act.other.d  act.social.c  act.social.d  act.wizard.c  act.wizard.d  act.wizard2.c  act.wizard2.d  aedit.c  aedit.d  alias.c  alias.d  alias.h  ban.c  ban.d  ban.h  bitvector.c  bitvector.d  bitvector.h  boards.c  (+208 more)
src/CVS/: Entries  Repository
src/util/: Configure  aqfix.c  c2t.c  cheatcheck.c  fix_bonded.c  mud2html.c  newpconv.c  obj2newtxt.c  obj2txt.c  purgeplay.c  t2c.c  temp.c  txt2obj.c
(+598 files in other folders)
